# bmquilting

./: README.md  generate.py  guess_block_size.py  make_seamless2.py  pyproject.toml  setup.py  synthesis_subroutines.py  types.py
.github/workflows/: sphinx_doc2pages  sphinx_doc2pages.yml
bmquilting/: __init__.py  circular.py  circular_synthesis_subroutines.py  comfy_utils.py  common_types.py  cphl_fill.py  generate.py  generate_circular.py  guess_block_size.py  hexa_lattice_iter.py  make_seamless.py  make_seamless2.py  proxy_gen.py  seam_smartblur.py  seamless_multipatch.py  seamless_singlepatch.py  square.py  synthesis_subroutines.py  types.py
bmquilting/_internal/: blocksize_heuristics.py  circular_subroutines.py  common.py  decorators.py  hexagonal_lattice.py  seams_blur.py  shmem_utils.py  square_subroutines.py  visual_debug.py
bmquilting/bmq_comfyui_utils/: setup.py
bmquilting/comfyui_utils/: setup.py  utilities.py
bmquilting/extras/: tkinter_ui_templates.py
bmquilting/jena2020/: generate.py
bmquilting/misc/: bse_desc_util.py  dry.py  (+8 more)
comfyui_utils/: setup.py  utilities.py  wrapped_functions.py
docs/: advanced.md  advanced_config.md  args_explained.md  blocksize_heuristics.md  gallery.md  main.md  parallelization.md  proxy_synth.md  quick_start.md  seam_blending_diagram.md  tex_transfer.md
extras/: tkinter_ui_templates.py
jena2020/: generate.py
misc/: bse_desc_util.py  bse_ft_util.py  bse_type_aliases.py  validation_utils.py
sphinx/: api.rst  conf.py  index.html  index.rst
tests/: test_circular.py  test_hexagonal_lattice.py  test_square.py
(+43 files in other folders)
