[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmquilting"
version = "2.0.0"
authors = [
    {name = "Bruno Madeira", email = "bmad.works@gmail.com"}
]
description = "A library for texture synthesis based on image quilting algorithms."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"} 
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.23.5",
    "joblib>=1.3.2",
    "opencv-python>=4.0.1.24",
    "pyastar2d>=1.0.6",
    "scikit-learn>=1.3.1",
]

[project.optional-dependencies]
fast = ["numba>=0.62.1"]

[project.urls]
Homepage = "https://github.com/bmad4ever/bmquilting"
Repository = "https://github.com/bmad4ever/bmquilting.git"
Issues = "https://github.com/bmad4ever/bmquilting/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src/bmquilting"]
